# falcon-service

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
