[tool.poetry]
name = "ggllm-wrapper"
version = "0.1.0"
description = ""
authors = ["Philipp Wundrack <philipp.wundrack@live.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
